feat: initial web ui proof of concept - doesn't compile

--- a/server/web_ui/shared/static/style.css
+++ b/server/web_ui/shared/static/style.css
@@ -248,3 +248,23 @@ body {
   max-width: 150px;
   max-height: 150px;
 }
+
+.codeblock {
+  background: gainsboro;
+  color: black;
+  padding: 1rem;
+  border: 1rem;
+  width: fit-content;
+  max-width: 100%;
+}
+
+.copy__btn {
+  float: right;
+  position: relative;
+  top: 1rem;
+  right: 1rem;
+  opacity: 50%;
+}
+.copy__btn:hover {
+  opacity: 90%;
+}
