Okay, main swap works and can login with pw+totp

--- a/server/core/templates/login.html
+++ b/server/core/templates/login.html
@@ -6,7 +6,7 @@
 (% endblock %)
 
 (% block body %)
-	<main class="flex-shrink-0 form-signin">
+	<main id="main" class="flex-shrink-0 form-signin">
 		<center>
 			<img src="/pkg/img/logo-square.svg" alt="Kanidm" class="kanidm_logo"/>
 			<h3>Kanidm</h3>
@@ -48,7 +48,3 @@
 		</div>
 	</main>
 (% endblock %)
-
-
-
-
