--- a/server/core/templates/unrecoverable_error.html
+++ b/server/core/templates/unrecoverable_error.html
@@ -7,7 +7,7 @@
 
 (% block body %)
 	<h2>Error</h2>
-	<main>
+	<main id="main">
 		<p>Error Code: (( err_code ))</p>
 		<p>Operation ID: (( operation_id ))</p>
 	</main>
