--- a/server/core/templates/base.html
+++ b/server/core/templates/base.html
@@ -8,6 +8,16 @@
 		<title>(% block title %)(( title )) - Kanidm(% endblock %)</title>
 
 		<link rel="icon" href="/pkg/img/favicon.png" />
+		<link rel="apple-touch-icon" href="/pkg/img/logo-256.png" />
+		<link rel="apple-touch-icon" sizes="180x180"
+			href="/pkg/img/logo-180.png" />
+		<link rel="apple-touch-icon" sizes="192x192"
+			href="/pkg/img/logo-192.png" />
+		<link rel="apple-touch-icon" sizes="512x512"
+			href="/pkg/img/logo-square.svg" />
+		<link rel="stylesheet" href="/pkg/external/bootstrap.min.css"
+			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" />
+		<link rel="stylesheet" href="/pkg/style.css" />
 
 		(% block head %)(% endblock %)
 	</head>
