--- a/server/core/templates/base_htmx.html
+++ b/server/core/templates/base_htmx.html
@@ -8,13 +8,22 @@
 		<title>(% block title %)(( title )) - Kanidm(% endblock %)</title>
 
 		<link rel="icon" href="/pkg/img/favicon.png" />
+		<link rel="apple-touch-icon" href="/pkg/img/logo-256.png" />
+		<link rel="apple-touch-icon" sizes="180x180"
+			href="/pkg/img/logo-180.png" />
+		<link rel="apple-touch-icon" sizes="192x192"
+			href="/pkg/img/logo-192.png" />
+		<link rel="apple-touch-icon" sizes="512x512"
+			href="/pkg/img/logo-square.svg" />
+
 		<link rel="stylesheet" href="/pkg/external/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"/>
 		<script src="/pkg/external/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"></script>
 		<script src="/pkg/external/htmx.min.1.9.2.js" integrity="sha384-L6OqL9pRWyyFU3+/bjdSri+iIphTN/bvYyM37tICVyOJkWZLpP2vGn6VUEXgzg6h"></script>
+		<link rel="stylesheet" href="/pkg/style.css" />
 
 		(% block head %)(% endblock %)
 	</head>
-	<body hx-boost="true">
+	<body hx-boost="true" class="flex-column d-flex h-100">
 		(% block body %)(% endblock %)
 		<footer class="footer mt-auto py-3 bg-light text-end">
 			<div class="container">
