Add Apps page with halfworking navbar

--- a/server/core/templates/apps.html
+++ b/server/core/templates/apps.html
@@ -1,8 +1,12 @@
 (% extends "base_htmx.html" %)
 
-(% block title %)Error(% endblock %)
+(% block title %)Apps(% endblock %)
 
 (% block head %)
+(% endblock %)
+
+(% block nav %)
+	(% include "navbar.html" %)
 (% endblock %)
 
 (% block body %)
