Add signout modal

--- a/server/core/templates/navbar.html
+++ b/server/core/templates/navbar.html
@@ -12,7 +12,7 @@
                 <li class="mb-1">
                     <a class="nav-link" href="/ui/apps"><span data-feather="file"></span>Apps</a>
                     <a class="nav-link" href="/ui/profile"><span data-feather="file"></span>Profile</a>
-                    <a class="nav-link" href="#">Sign out</a>
+                    <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#signoutModal">Sign out</a>
                 </li>
             </ul>
         </div>
