haccky passkey working

--- a/server/core/templates/login.html
+++ b/server/core/templates/login.html
@@ -1,6 +1,6 @@
 (% extends "base_htmx.html" %)
 
-(% block title %)Error(% endblock %)
+(% block title %)Login(% endblock %)
 
 (% block head %)
 (% endblock %)
