--- a/server/core/templates/base.html
+++ b/server/core/templates/base.html
@@ -15,8 +15,9 @@
 			href="/pkg/img/logo-192.png" />
 		<link rel="apple-touch-icon" sizes="512x512"
 			href="/pkg/img/logo-square.svg" />
-		<link rel="stylesheet" href="/pkg/external/bootstrap.min.css"
-			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" />
+
+		<link rel="stylesheet" href="/pkg/external/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"/>
+		<script src="/pkg/external/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"></script>
 		<link rel="stylesheet" href="/pkg/style.css" />
 
 		(% block head %)(% endblock %)
