--- a/server/core/templates/login_webauthn_partial.html
+++ b/server/core/templates/login_webauthn_partial.html
@@ -7,9 +7,9 @@
 <script src="/pkg/external/pkhtml.js" defer></script>
 
 (% if passkey %)
-<button hx-disable type="button" class="btn btn-dark" id="start-webauthn-button">Use Passkey</button>
+<button hx-disable type="button" class="btn btn-dark" id="start-passkey-button">Use Passkey</button>
 (% else %)
-<button type="button" class="btn btn-dark" id="start-webauthn-button">Use Security Key</button>
+<button type="button" class="btn btn-dark" id="start-seckey-button">Use Security Key</button>
 (% endif %)
 
 
