Fix navbar style

--- a/server/core/templates/navbar.html
+++ b/server/core/templates/navbar.html
@@ -11,7 +11,11 @@
             <ul class="(( crate::https::ui::CSS_NAVBAR_LINKS_UL ))">
                 <li class="mb-1">
                     <a class="nav-link" href="/ui/apps"><span data-feather="file"></span>Apps</a>
+                </li>
+                <li class="mb-1">
                     <a class="nav-link" href="/ui/profile"><span data-feather="file"></span>Profile</a>
+                </li>
+                <li class="mb-1">
                     <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#signoutModal">Sign out</a>
                 </li>
             </ul>
