Okay autocomplete works!

--- a/server/core/templates/login_mech_choose.html
+++ b/server/core/templates/login_mech_choose.html
@@ -1,3 +1,6 @@
+(% extends "login_base.html" %)
+
+(% block logincontainer %)
 <div class="container">
 	<p>Choose how to proceed:</p>
 </div>
@@ -5,7 +8,7 @@
 	<ul class="list-unstyled">
 		(% for mech in mechs %)
 		<li class="text-center mb-2">
-			<form id="login" hx-post='/ui/api/login_mech_choose' hx-target="#login-form-container" hx-push-url="false">
+			<form id="login" action="/ui/api/login_mech_choose" method="post">
 				<input type="hidden" id="mech" name="mech" value="(( mech.value ))" />
 				<button
 					type="submit"
@@ -16,3 +19,4 @@
 		(% endfor %)
 	</ul>
 </div>
+(% endblock %)
