--- a/server/core/templates/login_backupcode.html
+++ b/server/core/templates/login_backupcode.html
@@ -1,6 +1,8 @@
+(% extends "login_base.html" %)
 
+(% block logincontainer %)
 <label for="Backup Code" class="form-label">Backup Code</label>
-<form id="login" hx-post='/ui/api/login_backup_code' hx-target="#login-form-container" hx-push-url="false">
+<form id="login" action="/ui/api/login_backup_code" method="post">
 	<div class="input-group mb-3">
 		<input
 			autofocus=true
@@ -19,5 +21,4 @@
 		>Submit</button>
 	</div>
 </form>
-
-
+(% endblock %)
