--- a/server/core/templates/login_password.html
+++ b/server/core/templates/login_password.html
@@ -1,6 +1,8 @@
+(% extends "login_base.html" %)
 
+(% block logincontainer %)
 <label for="password" class="form-label">Password</label>
-<form id="login" hx-post='/ui/api/login_pw' hx-target="#login-form-container" hx-push-url="false">
+<form id="login" action="/ui/api/login_pw" method="post">
 	<div class="input-group mb-3">
 		<input
 			autofocus=true
@@ -9,7 +11,7 @@
 			name="password"
 			type="password"
 			autocomplete="current-password"
-			value=""
+			value="(( password ))"
 			required=true
 		/>
 	</div>
@@ -20,5 +22,4 @@
 		>Submit</button>
 	</div>
 </form>
-
-
+(% endblock %)
