--- a/server/core/templates/login_backupcode.html
+++ b/server/core/templates/login_backupcode.html
@@ -1,15 +1,15 @@
+(% extends "login_base.html" %)
 
-
-<label for="password" class="form-label">Password</label>
-<form id="login" hx-post='/ui/api/login_pw' hx-target="#login-form-container" hx-push-url="false">
+(% block logincontainer %)
+<label for="Backup Code" class="form-label">Backup Code</label>
+<form id="login" action="/ui/api/login_backup_code" method="post">
 	<div class="input-group mb-3">
 		<input
 			autofocus=true
 			class="autofocus form-control"
-			id="password"
-			name="password"
+			id="backupcode"
+			name="backupcode"
 			type="password"
-			autocomplete="current-password"
 			value=""
 			required=true
 		/>
@@ -18,8 +18,7 @@
 		<button
 			type="submit"
 			class="btn btn-dark"
-		>Begin</button>
+		>Submit</button>
 	</div>
 </form>
-
-
+(% endblock %)
