Make base_htmx_with_nav extend base_htmx

--- a/server/core/templates/apps.html
+++ b/server/core/templates/apps.html
@@ -1,10 +1,9 @@
 (% extends "base_htmx_with_nav.html" %)
-
 (% block title %)Apps(% endblock %)
 
 (% block head %)
 (% endblock %)
 
-(% block body %)
+(% block main %)
 	(( apps_partial|safe ))
 (% endblock %)
