Fixes the logout flow in htmx and improves the login error dialog

--- a/server/core/templates/unrecoverable_error.html
+++ b/server/core/templates/unrecoverable_error.html
@@ -8,6 +8,7 @@
 (% block body %)
 	<h2>Error</h2>
 	<main id="main">
+		<p>An unrecoverable error occured. Please contact your administrator with the details below.</p>
 		<p>Error Code: (( err_code ))</p>
 		<p>Operation ID: (( operation_id ))</p>
 	</main>
