A working password modal at last

--- a/server/core/templates/credentials_reset.html
+++ b/server/core/templates/credentials_reset.html
@@ -2,6 +2,7 @@
 (% block title %)Credentials Reset(% endblock %)
 
 (% block head %)
+<script src="/pkg/external/cred_update.js"></script>
 (% endblock %)
 
 (% block body %)
