--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -4,7 +4,6 @@
             <h3>Updating Credentials</h3>
             <p>(( names ))</p>
             <p>(( domain ))</p>
-            <p>(( primary_state == CUCredState::DeleteOnly ))</p>
         </div>
 
         <div class="row g-3">
@@ -85,7 +84,6 @@
                 <button
                         class="w-50 btn btn-success btn-lg"
                         disabled="!can_commit"
-                        onclick=""
                         type="submit">Submit Changes</button>
             </form>
         </div>
@@ -104,14 +102,13 @@
                 </div>
                 <div class="modal-footer">
                     <button id="delete-cancel" type="button" class="btn btn-secondary">Cancel</button>
-                    <button id="delete-submit" type="button" class="btn btn-danger"
-                            disabled="!submit_enabled"
-                    >Submit</button>
+                    <button id="delete-submit" type="button" class="btn btn-danger">Submit</button>
                 </div>
             </div>
         </div>
     </div>
-
+    <!-- Today we infer types by assigning a value to do full inference on and then assigning the value I wanted :) -->
+    (% let check_res = PwdCheckResult::Init %)
     (% include "cred_update/add_password_modal_partial.html" %)
 
 </div>
