feat: half working passkey modal, some polishing of the password modal

--- a/server/core/templates/cred_update/add_password_modal_partial.html
+++ b/server/core/templates/cred_update/add_password_modal_partial.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="staticPasswordLabel">Add a New Password</h5>
-                <button type="button" class="btn-close" aria-label="Close"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <form class="row g-3 needs-validation" id="newPasswordForm" novalidate
@@ -43,7 +43,6 @@
                         </ul>
                     </div>
 
-
                     <label for="new-password-check" class="form-label">Repeat Password</label>
                     <input
                             aria-describedby="new-password-check-feedback"
@@ -61,7 +60,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button id="password-cancel" type="button" class="btn btn-secondary">Cancel</button>
+                <button id="password-cancel" type="button" data-bs-dismiss="modal" class="btn btn-secondary">Cancel</button>
                 <button id="password-submit" type="button" class="btn btn-primary"
                         hx-target="#newPasswordForm" hx-select="#newPasswordForm" hx-swap="outerHTML"
                         hx-include="#newPasswordForm" hx-post="/ui/reset/new_pwd"
