--- a/server/core/templates/credentials_reset.html
+++ b/server/core/templates/credentials_reset.html
@@ -3,6 +3,7 @@
 
 (% block head %)
 <script src="/pkg/external/cred_update.js"></script>
+<script src="/pkg/external/base64.js" async></script>
 (% endblock %)
 
 (% block body %)
