--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -6,7 +6,7 @@
             <p>(( domain ))</p>
         </div>
 
-        <div class="row g-3">
+        <div class="row g-3" id="credentialUpdateDynamicSection">
             <form class="needs-validation" novalidate>
                 (% match ext_cred_portal %)
                     (% when CUExtPortal::None %)
@@ -68,12 +68,16 @@
                 (% match passkeys_state %)
                     (% when CUCredState::Modifiable %)
                         (% include "credentials_update_passkeys.html" %)
-                        <!-- TODO: If modifiable, render add passkey modal -->
+                        <!-- Here we are modifiable so we can render the button and addPasskey modal  -->
+                        (% let passkey_state = PassKeyState::Init %)
+                        (% include "cred_update/add_passkey_modal_partial.html" %)
                     (% when CUCredState::DeleteOnly %)
                         (% include "credentials_update_passkeys.html" %)
                     (% when CUCredState::AccessDeny %)
                     (% when CUCredState::PolicyDeny %)
                 (% endmatch %)
+
+                <!-- Password, totp credentials -->
                 (% let primary_state = primary_state %)
                 (% include "credentials_update_primary.html" %)
 
@@ -86,29 +90,28 @@
                         disabled="!can_commit"
                         type="submit">Submit Changes</button>
             </form>
-        </div>
-    </main>
 
-    <div class="modal fade" id="staticDeletePrimaryCred" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticDeletePrimaryCred" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="staticDeletePrimaryCredLabel">Delete Credential</h5>
-                    <button type="button" class="btn-close" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p>Delete your Password and any associated MFA?</p>
-                    <p><strong>Note:</strong>this will not remove Passkeys.</p>
-                </div>
-                <div class="modal-footer">
-                    <button id="delete-cancel" type="button" class="btn btn-secondary">Cancel</button>
-                    <button id="delete-submit" type="button" class="btn btn-danger">Submit</button>
+            <div class="modal fade" id="staticDeletePrimaryCred" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticDeletePrimaryCred" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="staticDeletePrimaryCredLabel">Delete Credential</h5>
+                            <button type="button" class="btn-close" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Delete your Password and any associated MFA?</p>
+                            <p><strong>Note:</strong>this will not remove Passkeys.</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button id="delete-cancel" type="button" class="btn btn-secondary">Cancel</button>
+                            <button id="delete-submit" type="button" class="btn btn-danger">Submit</button>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <!-- Today we infer types by assigning a value to do full inference on and then assigning the value I wanted :) -->
+            (% let check_res = PwdCheckResult::Init %)
+            (% include "cred_update/add_password_modal_partial.html" %)
         </div>
-    </div>
-    <!-- Today we infer types by assigning a value to do full inference on and then assigning the value I wanted :) -->
-    (% let check_res = PwdCheckResult::Init %)
-    (% include "cred_update/add_password_modal_partial.html" %)
-
+    </main>
 </div>
