--- a/server/core/templates/login.html
+++ b/server/core/templates/login.html
@@ -2,7 +2,7 @@
 
 (% block logincontainer %)
 <label for="username" class="form-label">Username</label>
-<form id="login" action="/ui/api/login_begin" method="post">
+<form id="login" action="/ui/login/begin" method="post">
 	<div class="input-group mb-3">
 		<input
 			autofocus=true
