--- a/server/core/templates/login_backupcode.html
+++ b/server/core/templates/login_backupcode.html
@@ -2,7 +2,7 @@
 
 (% block logincontainer %)
 <label for="Backup Code" class="form-label">Backup Code</label>
-<form id="login" action="/ui/api/login_backup_code" method="post">
+<form id="login" action="/ui/login/backup_code" method="post">
 	<div class="input-group mb-3">
 		<input
 			autofocus=true
