--- a/server/core/templates/login_password.html
+++ b/server/core/templates/login_password.html
@@ -2,7 +2,7 @@
 
 (% block logincontainer %)
 <label for="password" class="form-label">Password</label>
-<form id="login" action="/ui/api/login_pw" method="post">
+<form id="login" action="/ui/login/pw" method="post">
 	<div class="input-group mb-3">
 		<input
 			autofocus=true
