--- a/server/core/templates/login_totp.html
+++ b/server/core/templates/login_totp.html
@@ -8,7 +8,7 @@
 		<span class="error">TOTP must only consist of numbers</span>
 	(% when LoginTotpError::None %)
 (% endmatch %)
-<form id="login" action="/ui/api/login_totp" method="post">
+<form id="login" action="/ui/login/totp" method="post">
 	<div class="input-group mb-3">
 		<input
 			autofocus=true
