--- a/server/core/templates/login_webauthn.html
+++ b/server/core/templates/login_webauthn.html
@@ -6,7 +6,7 @@
 </script>
 
 <script src="/pkg/external/base64.js" async></script>
-<script src="/pkg/external/pkhtml.js" defer></script>
+<script src="/pkg/pkhtml.js" defer></script>
 
 (% if passkey %)
 <button hx-disable type="button" class="btn btn-dark" id="start-passkey-button">Use Passkey</button>
