--- a/server/core/templates/login_mech_choose.html
+++ b/server/core/templates/login_mech_choose.html
@@ -8,7 +8,7 @@
 	<ul class="list-unstyled">
 		(% for mech in mechs %)
 		<li class="text-center mb-2">
-			<form id="login" action="/ui/api/login_mech_choose" method="post">
+			<form id="login" action="/ui/login/mech_choose" method="post">
 				<input type="hidden" id="mech" name="mech" value="(( mech.value ))" />
 				<button
 					type="submit"
